[package]
name = "clap-tool-file"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
regex = "1.11.1"
termcolor = "1.4.1"
tempfile = "3.16.0"
walkdir = "2"
ignore = "0.4.23"
color-print = "0.3.7"
chrono = "0.4.39"
csv = "1.3.1"
serde_json = "1.0.138"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
glob = "0.3"